--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##post.post.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##post.post.json
@@ -143,7 +143,7 @@
           "mainField": "name"
         },
         "list": {
-          "label": "categories",
+          "label": "Categories",
           "searchable": false,
           "sortable": false
         }
@@ -281,7 +281,6 @@
         "categories",
         "related",
         "hero",
-        "createdAt",
         "updatedAt",
         "slug"
       ]
