wip(front): adjusts sitemap ignore pattern

--- a/front/package.json
+++ b/front/package.json
@@ -19,9 +19,9 @@
     "build": "vite --config vite.config.js build",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
-    "postbuild.l": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/**' -t --attribution=false --domain https://local.dgrebb.com",
-    "postbuild.s": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/cv/**' -t --attribution=false --domain https://stg.dgrebb.com",
-    "postbuild": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/cv/**' -t --attribution=false --domain https://www.dgrebb.com",
+    "postbuild.l": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/*/**' -t --attribution=false --domain https://local.dgrebb.com",
+    "postbuild.s": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/cv/*/**' -t --attribution=false --domain https://stg.dgrebb.com",
+    "postbuild": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/cv/*/**' -t --attribution=false --domain https://www.dgrebb.com",
     "format": "prettier --write .",
     "test.all": "npm run test.integration && npm run test.unit",
     "test.integration": "playwright test",
