--- a/back/package.json
+++ b/back/package.json
@@ -15,18 +15,18 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.16.0",
-    "@strapi/plugin-sentry": "4.16.0",
+    "@strapi/plugin-i18n": "4.16.2",
+    "@strapi/plugin-sentry": "4.16.2",
     "@strapi/plugin-seo": "^1.9.8",
-    "@strapi/plugin-users-permissions": "4.16.0",
-    "@strapi/provider-upload-aws-s3": "4.16.0",
-    "@strapi/strapi": "4.16.0",
+    "@strapi/plugin-users-permissions": "4.16.2",
+    "@strapi/provider-upload-aws-s3": "4.16.2",
+    "@strapi/strapi": "4.16.2",
     "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
     "strapi-plugin-config-sync": "^1.2.3",
-    "styled-components": "^5.3.11"
+    "styled-components": "5.3.3"
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
