--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,18 +32,23 @@ jobs:
           sparse-checkout: |
             front
 
-      - name: ⬢ Setup Node & Cache
-        uses: actions/setup-node@v4
+      - name: ⚄ Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: "20.x"
-          cache: "npm"
+          version: 8
+
+      - name: ⬢ Setup Node & Cache
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+          cache: "pnpm"
           cache-dependency-path: |
             front/package.json
-            front/package-lock.json
+            front/pnpm-lock.yaml
             front/node_modules
 
-      - name: ↧ Install & Patch
-        run: cd front && npm ci
+      - name: ↧ Install Dependencies
+        run: cd front && pnpm install
 
       - name: 👓 Check
         run: |
