--- a/.github/workflows/test-psi.yml
+++ b/.github/workflows/test-psi.yml
@@ -42,19 +42,24 @@ jobs:
             _ci/_utils
             _ci/perf
 
+      - name: ⚄ Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: ⬢ Setup Node & Cache
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
           cache-dependency-path: |
             _ci/perf/package.json
-            _ci/perf/package-lock.json
+            _ci/perf/pnpm-lock.yaml
             _ci/perf/node_modules
 
       - name: ↧ Install & Patch
         run: |
-          cd _ci/perf && npm ci
+          cd _ci/perf && pnpm i
 
       - name: 🌤️ Warmup CloudFront Cache
         run: |
@@ -63,9 +68,9 @@ jobs:
       - name: PSI Mobile
         run: |
           cd _ci/perf
-          npm run -s psi -- ${{ github.ref_name == 'main' && 'https://www.dgrebb.com/?roboto' || 'https://stg.dgrebb.com/?roboto' }} --key=${{ secrets.PSI_APIKEY }} --prettyprint=true --strategy=mobile >> $GITHUB_STEP_SUMMARY
+          pnpm --reporter=silent psi ${{ github.ref_name == 'main' && 'https://www.dgrebb.com/?roboto' || 'https://stg.dgrebb.com/?roboto' }} --key=${{ secrets.PSI_APIKEY }} --prettyprint=true --strategy=mobile >> $GITHUB_STEP_SUMMARY
 
       - name: PSI Desktop
         run: |
           cd _ci/perf
-          npm run -s psi -- ${{ github.ref_name == 'main' && 'https://www.dgrebb.com/?roboto' || 'https://stg.dgrebb.com/?roboto' }} --key=${{ secrets.PSI_APIKEY }} --prettyprint=true --strategy=desktop >> $GITHUB_STEP_SUMMARY
+          pnpm --reporter=silent psi ${{ github.ref_name == 'main' && 'https://www.dgrebb.com/?roboto' || 'https://stg.dgrebb.com/?roboto' }} --key=${{ secrets.PSI_APIKEY }} --prettyprint=true --strategy=desktop >> $GITHUB_STEP_SUMMARY
