--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -26,5 +26,16 @@
     "lighthouse": "11.4.0",
     "psi": "^4.1.0",
     "wallace-cli": "^3.0.0"
+  },
+  "dependencies": {
+    "npm-check-updates": "^16.14.12"
+  },
+  "pnpm": {
+    "overrides": {
+      "node-forge@<1.0.0": ">=1.0.0",
+      "node-forge@<1.3.0": ">=1.3.0",
+      "got@<11.8.5": ">=11.8.5",
+      "json-bigint@<1.0.0": ">=1.0.0"
+    }
   }
 }
