feat(back): add more fastlinks to dashboard (#1155)
Closes: #1155

--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##project.project.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##project.project.json
@@ -375,9 +375,11 @@
       ],
       "list": [
         "name",
-        "slug",
+        "experiences",
         "skills",
-        "organizations"
+        "awards",
+        "organizations",
+        "slug"
       ]
     }
   },
