--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##organization.organization.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##organization.organization.json
@@ -298,10 +298,11 @@
       ],
       "list": [
         "name",
-        "slug",
         "projects",
         "skills",
-        "URL"
+        "experiences",
+        "URL",
+        "slug"
       ]
     }
   },
