--- a/front/package.json
+++ b/front/package.json
@@ -37,12 +37,12 @@
     "@iconify-json/icomoon-free": "^1.1.8",
     "@iconify-json/icon-park-outline": "^1.1.15",
     "@iconify-json/mdi": "^1.1.64",
-    "@iconify-json/ph": "^1.1.9",
-    "@iconify-json/simple-icons": "^1.1.86",
+    "@iconify-json/ph": "^1.1.10",
+    "@iconify-json/simple-icons": "^1.1.87",
     "@iconify-json/typcn": "^1.1.9",
     "@playwright/test": "^1.40.1",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.0.6",
+    "@sveltejs/kit": "^2.3.2",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
@@ -56,28 +56,28 @@
     "postcss-import": "^16.0.0",
     "postcss-nested": "^6.0.1",
     "postcss-nesting": "^12.0.2",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.1",
     "prettier-plugin-css-order": "^2.0.1",
     "prettier-plugin-svelte": "^3.1.2",
-    "rollup-plugin-bundle-stats": "^4.8.4",
+    "rollup-plugin-bundle-stats": "^4.9.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "slugger": "^1.0.1",
     "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
+    "svelte-check": "^3.6.3",
     "svelte-highlight": "7.4.8",
     "svelte-meta-tags": "^3.1.0",
     "svelte-sitemap": "^2.6.0",
     "typescript": "^5.3.3",
-    "unplugin-icons": "^0.18.1",
+    "unplugin-icons": "^0.18.2",
     "vite": "^5.0.11",
     "vite-plugin-progress": "^0.0.7",
-    "vitest": "^1.1.3"
+    "vitest": "^1.2.0"
   },
   "type": "module",
   "pnpm": {
     "patchedDependencies": {
-      "@sveltejs/kit@2.0.6": "patches/@sveltejs__kit@2.0.6.patch",
-      "svelte-highlight@7.4.8": "patches/svelte-highlight@7.4.8.patch"
+      "svelte-highlight@7.4.8": "patches/svelte-highlight@7.4.8.patch",
+      "@sveltejs/kit@2.3.2": "patches/@sveltejs__kit@2.3.2.patch"
     }
   }
 }
