--- a/.github/workflows/backstop-remote.yml
+++ b/.github/workflows/backstop-remote.yml
@@ -11,6 +11,7 @@ permissions:
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+  NODE_VERSION: 20
 
 jobs:
   backstop:
@@ -41,7 +42,7 @@ jobs:
       - name: ⬢ Setup Node & Cache
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: ${{ env.NODE_VERSION }}
           cache: "pnpm"
           cache-dependency-path: |
             _ci/backstop/package.json
