--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -30,6 +30,7 @@ permissions:
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+  NODE_VERSION: 20
 
 jobs:
   backstop:
@@ -55,25 +56,13 @@ jobs:
           token: ${{ github.token }}
           fetch-depth: 1
           sparse-checkout: |
+            .github/actions
             _ci
 
-      - name: ⚄ Setup pnpm
-        uses: pnpm/action-setup@v2
+      - name: 🛢 Install Dependencies
+        uses: ./.github/actions/install-cache-deps
         with:
-          version: 8
-
-      - name: ⬢ Setup Node & Cache
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-          cache-dependency-path: |
-            _ci/backstop/package.json
-            _ci/backstop/pnpm-lock.yaml
-            _ci/backstop/node_modules
-
-      - name: ↧ Install Dependencies
-        run: cd _ci/backstop && pnpm install && npx playwright install --with-deps
+          WORKSPACE_ROOT: _ci/backstop
 
       - name: 🔥 Warmup Cache
         run: ./_ci/_utils/warmup.sh ${{ inputs.env }}
