--- a/back/package.json
+++ b/back/package.json
@@ -34,7 +34,12 @@
     "npm": ">=6.0.0"
   },
   "overrides": {
-    "vite": "^4.5.2"
+    "vite@<4.5.2": "4.5.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite@<4.5.2": "4.5.2"
+    }
   },
   "strapi": {},
   "devDependencies": {
