wip(github): updates github issue templates

--- a/.github/ISSUE_TEMPLATE/BUGS.yml
+++ b/.github/ISSUE_TEMPLATE/BUGS.yml
@@ -3,8 +3,7 @@ description: Items to fix
 title: "🐞 [BUG]: "
 labels: ["bug"]
 projects: ["dgrebb.com"]
-assignees:
-  - dgrebb
+assignees: dgrebb
 body:
   - type: textarea
     id: what-happened
