--- a/.github/ISSUE_TEMPLATE/FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE.yml
@@ -3,8 +3,7 @@ description: What are we building?
 title: "✨ [FEAT]: "
 labels: "feature"
 projects: "dgrebb.com"
-assignees:
-  - dgrebb
+assignees: dgrebb
 body:
   - type: textarea
     id: summary
