--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -18,8 +18,7 @@
     "start": "ENVIRONMENT=\"$ENV\" pm2 start ecosystem.config.js && pm2 monit",
     "stop": "pm2 stop backstop && pm2 delete backstop && kill -9 $( lsof -i:3000 -t )",
     "test": "ENVIRONMENT=\"$ENV\" backstop test --config=backstop.config.js",
-    "test.gh": "ENVIRONMENT=gh-\"$ENV\" backstop test --config=backstop.config.js",
-    "postinstall": "patch-package"
+    "test.gh": "ENVIRONMENT=gh-\"$ENV\" backstop test --config=backstop.config.js"
   },
   "keywords": [],
   "author": "",
@@ -29,8 +28,8 @@
     "cors": "^2.8.5",
     "http-server": "^14.1.1",
     "patch-package": "^8.0.0",
-    "@playwright/test": "^1.41.0",
-    "pm2": "^5.3.0",
-    "super-simple-web-server": "^1.1.4"
+    "@playwright/test": "^1.41.1",
+    "pm2": "^5.3.1",
+    "super-simple-web-server": "github:dgrebb/super-simple-web-server#0.0.2"
   }
 }
