--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -31,5 +31,10 @@
     "@playwright/test": "^1.41.1",
     "pm2": "^5.3.1",
     "super-simple-web-server": "github:dgrebb/super-simple-web-server#0.0.2"
+  },
+  "engines": {
+    "node": ">=16.0.0 <=20.x.x",
+    "npm": ">=6.0.0",
+    "pnpm": ">= 8.14.1"
   }
 }
