--- a/back/package.json
+++ b/back/package.json
@@ -31,7 +31,8 @@
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
+    "npm": ">=6.0.0",
+    "pnpm": ">= 8.14.1"
   },
   "overrides": {
     "vite@<4.5.2": "4.5.2"
