--- a/front/package.json
+++ b/front/package.json
@@ -73,6 +73,11 @@
     "vite-plugin-progress": "^0.0.7",
     "vitest": "^1.2.1"
   },
+  "engines": {
+    "node": ">=16.0.0 <=20.x.x",
+    "npm": ">=6.0.0",
+    "pnpm": ">= 8.14.1"
+  },
   "type": "module",
   "pnpm": {
     "patchedDependencies": {
